# demoshop

./: README.md  pyproject.toml  pytest.ini
tests/: conftest.py  test_shopihg_cart.py
